# MultiQC_dumpling

./: .gitignore  LICENSE  MANIFEST.in  README.md  multiqc_dumpling_config.yaml  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish.yml
multiqc_dumpling/: dumpling_initialization.py  dumpling_intialization.py
multiqc_dumpling/modules/dumpling/: __init__.py  dumpling.py
tests/: test_dumpling_plugin.py  test_fixtures.py
tests/fixtures/baseline_run/: baseline_1.csv  baseline_1.refCoverage  baseline_1_accepted_processing.tsv  baseline_1_rejected_processing.tsv  baseline_1_samtools_stats.txt  baseline_1_total_processing.tsv
tests/fixtures/scoring/: cond_A_scores.csv  cond_B_scores.csv  enrich2_cond_A_R1_main_identifiers_scores.tsv
