[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "multiqc_dumpling"
version = "1.0"
description = "MultiQC plugin for Dumpling DMS pipeline"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Christian Macdonald", email = "christian.macdonald@wisc.edu" },
]
keywords = ["bioinformatics", "multiqc", "dumpling", "dms"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Environment :: Web Environment",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Programming Language :: Python",
  "Programming Language :: JavaScript",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
  "multiqc>=1.0",
  "pandas",
]

[project.urls]
Homepage = "https://github.com/odcambc/MultiQC_dumpling"
Repository = "https://github.com/odcambc/MultiQC_dumpling"
Downloads = "https://github.com/odcambc/MultiQC_dumpling/releases"

[project.entry-points."multiqc.modules.v1"]
dumpling = "multiqc_dumpling.modules.dumpling:MultiqcModule"

[project.entry-points."multiqc.hooks.v1"]
config_loaded = "multiqc_dumpling.dumpling_initialization:dumpling_plugin_execution_start"

[tool.setuptools]
include-package-data = false
zip-safe = false

[tool.setuptools.packages.find]
include = ["multiqc_dumpling*"]
